# fictionup

./: CHANGELOG  CMakeLists.txt  README.md
data/meta-lang/: en.yaml  ru.yaml
deb/: debian.changelog  debian.control  debian.rules  fictionup.dsc
doc/: fictionup-example-ru.md  fictionup.1
examples/: fictionup-example-en.fb2  fictionup-example-en.md
hoedown/: hoedown-3.0.7.patch
hoedown/src/: autolink.c  buffer.c  document.c  document.h
libb64/include/b64/: cencode.h
libb64/src/: cencode.c
spec/: fictionup.spec
src/: fb2.c  fb2.h  main.c  meta.c  meta.h  meta_subst.c  meta_subst.h  options.c  options.h  parse_meta_lang.c  parse_meta_lang.h  parse_yaml.c  parse_yaml.h  utils.c  utils.h  version.h  write_zip.c  write_zip.h
